another copilot test

--- a/index.html
+++ b/index.html
@@ -53,11 +53,7 @@
 
 							<header>
 								<h2 class="alt"> <strong>Gideon R. Chiusole</strong></h2>
-								<p>I am a PhD student in Mathematics at TU Munich 
-									in the TopMath Program under the supervision of Christian Kuehn.
-									I am primarily interested in dynamical aspects of stochastic partial differential equations. <br>
-									This is my personal website. You can reach me at g.chiusole@tum.de.
-								</p>
+								<p>github test</p>
 							</header>
 
 							<!-- <footer>
