--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 								<p>I am a PhD student in Mathematics at TU Munich 
 									in the TopMath Program under the supervision of Christian Kuehn.
 									I am primarily interested in dynamical aspects of stochastic partial differential equations. <br>
-									This is my personal website. You can reach me at g.chiusole@tum.de.
-								</p>
+									This is my personal website. You can reach me at <a href="mailto:g.chiusole@tum.de">g.chiusole@tum.de</a>
 							</header>
 
 							<!-- <footer>
@@ -74,137 +73,28 @@
 							<header>
 								<h2>Research</h2>
 							</header>
-
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
-
-							<div class="row">
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-										<header>
-											<h3>Ipsum Feugiat</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>Rhoncus Semper</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-										<header>
-											<h3>Magna Nullam</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>Natoque Vitae</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-										<header>
-											<h3>Dolor Penatibus</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Orci Convallis</h3>
-										</header>
-									</article>
-								</div>
-							</div>
-
+							<ol>
+							<li>Towards Abstract Wiener Model Spaces</li>
+							</ol>
 						</div>
 					</section>
 
-				<!-- Seminar Notes -->
-					<section id="about" class="three">
+				<!-- Other Documents -->
+					<section id="other" class="three">
 						<div class="container">
 
 							<header>
-								<h2>About Me</h2>
+								<h2>Other Documents</h2>
 							</header>
-
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<ol>
+							<li><a href="documents/CV_GideonChiusole.pdf" target="_blank">Curriculum Vitae</a></li>
+							<li><a href="documents/StatementOfPurpose_GideonChiusole.pdf" target="_blank">Statement of Purpose</a></li>
+							<li><a href="documents/ResearchProposal_GideonChiusole.pdf" target="_blank">Research Proposal</a></li>
+							<li><a href="documents/Transcripts_GideonChiusole.pdf" target="_blank">Transcripts</a></li>
+							</ol>
 
 						</div>
-					</section>
 
-				<!-- Thesis & Project -->
-					<section id="contact" class="four">
-						<div class="container">
-
-							<header>
-								<h2>Contact</h2>
-							</header>
-
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
-
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
-									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
-							</form>
-
-						</div>
-					</section>
-
-				<!-- Essays -->
-				<section id="contact" class="four">
-					<div class="container">
-
-						<header>
-							<h2>Contact</h2>
-						</header>
-
-						<p>Elementum sem parturient nulla quam placerat viverra
-						mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-						donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-						orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
-
-						<form method="post" action="#">
-							<div class="row">
-								<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-								<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
-								<div class="col-12">
-									<textarea name="message" placeholder="Message"></textarea>
-								</div>
-								<div class="col-12">
-									<input type="submit" value="Send Message" />
-								</div>
-							</div>
-						</form>
-
-					</div>
-				</section>
 
 			</div>
 
